include/altdss/capi/dss.h

    /*! 
    Specify the name of the Line element to set it active.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Name(const char* Value);
    /*! 
    Number of Phases, this Line element.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Phases(int32_t Value);
    /*! 
    Positive-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_R1(double Value);
    /*! 
    Positive-sequence reactance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_X1(double Value);
    /*! 
    Zero-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_C0(void);
    /*! 
    Positive-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_C1(void);
    ALTDSS_CAPI_DLL void Lines_Get_Cmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Lines_Get_Cmatrix but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Lines_Get_Cmatrix_GR(void);
    /*! 
    Zero-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_R0(void);
    /*! 
    Resistance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Lines_Get_Rmatrix but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Lines_Get_Rmatrix_GR(void);
    /*! 
    Zero-sequence reactance ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_X0(void);
    /*!
    Reactance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as Lines_Get_Xmatrix but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void Lines_Get_Xmatrix_GR(void);
    /*! 
    Zero-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_C0(double Value);
    /*! 
    Positive-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_C1(double Value);
    ALTDSS_CAPI_DLL void Lines_Set_Cmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Zero-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_R0(double Value);
    /*! 
    Resistance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Zero-sequence reactance ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_X0(double Value);
    ALTDSS_CAPI_DLL void Lines_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);