src/CAPI/CAPI_Lines.pas

    
    elem.LineCodeObj := DSSPrime.LineCodeClass.Find(Value);
    if elem.LineCodeObj = NIL then
    begin
        DoSimpleMsg(DSSPrime, 'LineCode "%s" not found.', [Value], 5009);
        Exit;
    end;
    if (DSS_EXTENSIONS_COMPAT and ord(TDSSCompatFlags.NoPropertyTracking)) = 0 then
    begin
        elem.SetAsNextSeq(ord(TLineProp.LineCode));
    end;
    elem.FetchLineCode(); // Note: original didn't reproduce all side-effects from parser
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Name(const Value: PAnsiChar); CDECL;
begin
    if InvalidCircuit(DSSPrime) then
        Exit;
    if DSSPrime.LineClass.SetActive(Value) then
    begin
        DSSPrime.ActiveCircuit.ActiveCktElement := DSSPrime.LineClass.ElementList.Active;
        DSSPrime.ActiveCircuit.Lines.Get(DSSPrime.LineClass.Active);
    end
    else
    begin
        DoSimpleMsg(DSSPrime, 'Line "%s" not found in Active Circuit.', [Value], 5008);
    end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Phases(Value: Integer); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if Value < 1 then
    begin
        DoSimpleMsg(DSSPrime, '%s: Number of phases must be a positive integer!', [elem.FullName], 6568);
        Exit;
    end;
    elem.FNphases := Value;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_R1(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.R1 := Value * elem.UnitsConvert;
    elem.SymComponentsChanged := TRUE;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X1(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.X1 := Value * elem.UnitsConvert;
    elem.SymComponentsChanged := TRUE;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
function Lines_Get_C0(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.C0 / elem.UnitsConvert * 1.0e9;
end;
//------------------------------------------------------------------------------
function Lines_Get_C1(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.C1 / elem.UnitsConvert * 1.0e9;
end;
//------------------------------------------------------------------------------
procedure Lines_Get_Cmatrix(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    i, j, k: Integer;
    Factor: Double;
    elem: TLineObj;
    nph: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    nph := elem.Nphases;
    Factor := TwoPi * elem.BaseFrequency * 1.0e-9 * elem.UnitsConvert;  // corrected 2.9.2018 RCD
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, nph * nph, nph, nph);
    k := 0;
    for i := 1 to nph do
        for j := 1 to nph do
        begin
            if (elem.LineGeometryObj <> NIL) or elem.SpacingSpecified then  
                Result[k] := elem.Yc[i, j].im / Factor / elem.Len
            else 
                Result[k] := elem.Yc[i, j].im / Factor;

            Inc(k);
        end;
end;

procedure Lines_Get_Cmatrix_GR(); CDECL;
// Same as Lines_Get_Cmatrix but uses global result (GR) pointers
begin
    Lines_Get_Cmatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function Lines_Get_R0(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.R0 / elem.UnitsConvert;
end;
//------------------------------------------------------------------------------
procedure Lines_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    i, j, k: Integer;
    elem: TLineObj;
    nph: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    nph := elem.Nphases;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, nph * nph, nph, nph);
    k := 0;
    for i := 1 to nph do
        for j := 1 to nph do
        begin
            if (elem.LineGeometryObj <> NIL) Or elem.SpacingSpecified then
                Result[k] := elem.Z[i, j].Re / elem.Len
            else 
                Result[k] := elem.Z[i, j].Re / elem.UnitsConvert;

            Inc(k);
        end;
end;

procedure Lines_Get_Rmatrix_GR(); CDECL;
// Same as Lines_Get_Rmatrix but uses global result (GR) pointers
begin
    Lines_Get_Rmatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
function Lines_Get_X0(): Double; CDECL;
var
    elem: TLineObj;
begin
    Result := 0.0;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := elem.X0 / elem.UnitsConvert;
end;
//------------------------------------------------------------------------------
procedure Lines_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    i, j, k: Integer;
    elem: TLineObj;
    nph: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
    begin
        DefaultResult(ResultPtr, ResultCount);
        Exit;
    end;
    nph := elem.Nphases;
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, nph * nph, nph, nph);
    k := 0;
    for i := 1 to nph do
        for j := 1 to nph do
        begin
            if (elem.LineGeometryObj <> NIL) Or elem.SpacingSpecified then
                Result[k] := elem.Z[i, j].im / elem.Len
            else
                Result[k] := elem.Z[i, j].im / elem.UnitsConvert;

            Inc(k);
        end;
end;

procedure Lines_Get_Xmatrix_GR(); CDECL;
// Same as Lines_Get_Xmatrix but uses global result (GR) pointers
begin
    Lines_Get_Xmatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
procedure Lines_Set_C0(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.C0 := Value * 1.0e-9 * elem.UnitsConvert;
    elem.SymComponentsChanged := TRUE;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_C1(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.C1 := Value * 1.0e-9 * elem.UnitsConvert;
    elem.SymComponentsChanged := TRUE;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Cmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i, j, k: Integer;
    Factor: Double;
    elem: TLineObj;
    nph: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Value := PDoubleArray0(ValuePtr);
    nph := elem.Nphases;

    if (nph * nph) <> ValueCount then
    begin
        DoSimpleMsg(DSSPrime,
            'The number of values provided (%d) does not match the expected (%d).', 
            [ValueCount, nph * nph],
        183);
        Exit;
    end;

    Factor := TwoPi * elem.BaseFrequency * 1.0e-9;
    k := 0;
    for i := 1 to nph do
        for j := 1 to nph do
        begin
            elem.Yc[i, j] := Cmplx(0.0, Value[k] * Factor);
            Inc(k);
        end;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_R0(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.R0 := Value * elem.UnitsConvert;
    elem.SymComponentsChanged := TRUE;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i, j, k: Integer;
    Ztemp: complex;
    elem: TLineObj;
    nph: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Value := PDoubleArray0(ValuePtr);
    nph := elem.Nphases;
    if (nph * nph) <> ValueCount then
    begin
        DoSimpleMsg(DSSPrime,
            'The number of values provided (%d) does not match the expected (%d).', 
            [ValueCount, nph * nph],
        183);
        Exit;
    end;

    k := 0;
    for i := 1 to nph do
        for j := 1 to nph do
        begin
            ZTemp := elem.Z[i, j];
            elem.Z[i, j] := Cmplx(Value[k], ZTemp.im);
            Inc(k);
        end;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X0(Value: Double); CDECL;
var
    elem: TLineObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.X0 := Value * elem.UnitsConvert;
    elem.SymComponentsChanged := TRUE;
    elem.YprimInvalid := TRUE;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    i, j, k: Integer;
    Ztemp: complex;
    elem: TLineObj;
    nph: Integer;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Value := PDoubleArray0(ValuePtr);
    
    nph := elem.Nphases;
    if (nph * nph) <> ValueCount then
    begin
        DoSimpleMsg(DSSPrime,
            'The number of values provided (%d) does not match the expected (%d).', 
            [ValueCount, nph * nph],
        183);
        Exit;
    end;

    k := 0;
    for i := 1 to nph do
        for j := 1 to nph do
        begin
            ZTemp := elem.Z[i, j];
            elem.Z[i, j] := Cmplx(Ztemp.re, Value[k]);
            Inc(k);
        end;
